--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
   "scripts": {
     "analyzer": "node scripts.build --analyzer",
     "build": "node scripts.build --mode=production",
-    "format": "npm run format:package && npm run format:prettier && npm run format:eslint && npm run format:scss",
-    "format:eslint": "eslint --ext .ts,.tsx,.json src/ --fix",
+    "format": "npm run format:package && npm run format:prettier && npm run format:code && npm run format:styles",
+    "format:code": "eslint --ext .ts,.tsx,.json src/ --fix",
     "format:package": "sort-package-json",
     "format:prettier": "prettier --write \"src/**/*.{ts,tsx,json}\"",
-    "format:scss": "stylelint \"src/**/*.scss\" --fix",
+    "format:styles": "stylelint \"src/**/*.scss\" --fix",
     "lint": "npm run lint:ts && npm run lint:code",
     "lint:code": "eslint --ext .ts,.tsx,.json src/",
     "lint:commit": "commitlint -e",
