feat: lint-staged

--- a/package.json
+++ b/package.json
@@ -19,9 +19,10 @@
     "lint:commit": "commitlint -e",
     "lint:scss": "stylelint \"src/**/*.scss\"",
     "lint:ts": "tsc --noEmit",
+    "pre-commit": "lint-staged",
     "prepare": "husky install",
     "start": "node scripts.build",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\""
   },
   "dependencies": {
     "@loadable/component": "5.15.2",
@@ -60,8 +61,8 @@
     "eslint-plugin-react-hooks": "4.6.0",
     "eslint-plugin-sort-keys-fix": "^1.1.2",
     "eslint-plugin-unicorn": "^43.0.1",
-    "git-is-ready-to-push": "^1.0.0",
     "husky": "^8.0.1",
+    "lint-staged": "^13.0.3",
     "prettier": "^2.6.2",
     "sort-package-json": "^1.57.0",
     "stylelint": "14.9.1",
