--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@types/react-dom": "17.0.5",
     "@types/react-helmet": "6.1.5",
     "@types/webpack-env": "1.16.2",
+    "@typescript-eslint/eslint-plugin": "^5.52.0",
     "@typescript-eslint/parser": "^5.32.0",
     "eslint": "^8.19.0",
     "eslint-config-airbnb": "^19.0.4",
@@ -67,6 +68,7 @@
     "prettier": "^2.6.2",
     "sort-package-json": "^1.57.0",
     "stylelint": "14.9.1",
+    "stylelint-config-clean-order": "^5.0.0",
     "stylelint-config-prettier-scss": "^0.0.1",
     "stylelint-config-recommended-scss": "7.0.0",
     "stylelint-config-standard-scss": "5.0.0",
