--- a/package.json
+++ b/package.json
@@ -25,53 +25,53 @@
     "test": "echo \"Error: no test specified\""
   },
   "dependencies": {
-    "@loadable/component": "5.15.2",
-    "@reduxjs/toolkit": "1.8.3",
-    "@types/node-fetch": "2.6.2",
+    "@loadable/component": "5.15.3",
+    "@reduxjs/toolkit": "1.9.7",
+    "@types/node-fetch": "2.6.6",
     "history": "5.3.0",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-helmet": "6.1.0",
-    "react-redux": "7.2.8",
-    "react-router": "6.3.0",
-    "react-router-dom": "6.3.0",
-    "redux": "4.2.0",
-    "redux-thunk": "2.4.1"
+    "react-redux": "7.2.9",
+    "react-router": "6.16.0",
+    "react-router-dom": "6.16.0",
+    "redux": "4.2.1",
+    "redux-thunk": "2.4.2"
   },
   "devDependencies": {
-    "@commitlint/cli": "^17.0.3",
-    "@commitlint/config-conventional": "^17.0.3",
+    "@commitlint/cli": "^17.7.2",
+    "@commitlint/config-conventional": "^17.7.0",
     "@rockpack/compiler": "3.1.0",
-    "@types/loadable__component": "5.13.4",
-    "@types/node": "16.11.45",
-    "@types/react": "17.0.8",
-    "@types/react-dom": "17.0.5",
-    "@types/react-helmet": "6.1.5",
-    "@types/webpack-env": "1.16.2",
-    "@typescript-eslint/eslint-plugin": "^5.52.0",
-    "@typescript-eslint/parser": "^5.32.0",
-    "eslint": "^8.19.0",
+    "@types/loadable__component": "5.13.5",
+    "@types/node": "18.18.4",
+    "@types/react": "18.2.28",
+    "@types/react-dom": "18.2.13",
+    "@types/react-helmet": "6.1.7",
+    "@types/webpack-env": "1.18.2",
+    "@typescript-eslint/eslint-plugin": "^5.62.0",
+    "@typescript-eslint/parser": "^5.62.0",
+    "eslint": "^8.51.0",
     "eslint-config-airbnb": "^19.0.4",
-    "eslint-config-airbnb-typescript": "^17.0.0",
-    "eslint-config-prettier": "8.5.0",
-    "eslint-plugin-check-file": "^1.2.2",
-    "eslint-plugin-import": "^2.26.0",
+    "eslint-config-airbnb-typescript": "^17.1.0",
+    "eslint-config-prettier": "9.0.0",
+    "eslint-plugin-check-file": "^2.6.2",
+    "eslint-plugin-import": "^2.28.1",
     "eslint-plugin-jest-formatting": "^3.1.0",
     "eslint-plugin-json": "^3.1.0",
     "eslint-plugin-perfectionist": "^2.1.0",
-    "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-react": "7.30.1",
-    "eslint-plugin-react-hooks": "4.6.0",
-    "eslint-plugin-unicorn": "^43.0.1",
-    "husky": "^8.0.1",
-    "lint-staged": "^13.0.3",
-    "prettier": "^2.6.2",
-    "sort-package-json": "^1.57.0",
-    "stylelint": "14.9.1",
-    "stylelint-config-clean-order": "^5.0.0",
-    "stylelint-config-prettier-scss": "^0.0.1",
-    "stylelint-config-recommended-scss": "7.0.0",
-    "stylelint-config-standard-scss": "5.0.0",
-    "stylelint-scss": "4.3.0"
+    "eslint-plugin-prettier": "^5.0.1",
+    "eslint-plugin-react": "^7.33.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-unicorn": "^48.0.1",
+    "husky": "^8.0.3",
+    "lint-staged": "^14.0.1",
+    "prettier": "^3.0.3",
+    "sort-package-json": "^2.6.0",
+    "stylelint": "^15.10.3",
+    "stylelint-config-clean-order": "^5.2.0",
+    "stylelint-config-prettier-scss": "^1.0.0",
+    "stylelint-config-recommended-scss": "^13.0.0",
+    "stylelint-config-standard-scss": "^11.0.0",
+    "stylelint-scss": "^5.2.1"
   }
 }
