--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-regexp": "^2.1.1",
+    "eslint-plugin-sonarjs": "^0.22.0",
     "eslint-plugin-unicorn": "^48.0.1",
     "husky": "^8.0.3",
     "lint-staged": "^14.0.1",
