feat: update node to v20

--- a/.gitignore
+++ b/.gitignore
@@ -40,8 +40,8 @@ bower_components
 build/Release
 
 # Dependency directories
-node_modules
-jspm_packages
+node_modules/
+jspm_packages/
 
 # Optional npm cache directory
 .npm
@@ -57,9 +57,6 @@ jspm_packages
 
 # Yarn Integrity file
 .yarn-integrity
-
-# dotenv environment variables file
-*.env
 
 # next.js build output
 .next
@@ -93,7 +90,7 @@ test-reports
 .eslintrc.custom.js
 .prettierrc.custom.js
 
-# dotenv file ought to ignore
+# dotenv environment variables file
 .env
 
 # Custom rules
