--- a/package.json
+++ b/package.json
@@ -25,55 +25,58 @@
     "test": "echo \"Error: no test specified\""
   },
   "dependencies": {
-    "@loadable/component": "5.15.3",
-    "@reduxjs/toolkit": "1.9.7",
-    "@types/node-fetch": "2.6.6",
-    "history": "5.3.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-helmet": "6.1.0",
-    "react-redux": "7.2.9",
-    "react-router": "6.16.0",
-    "react-router-dom": "6.16.0",
-    "redux": "4.2.1",
-    "redux-thunk": "2.4.2"
+    "@loadable/component": "^5.15.3",
+    "@reduxjs/toolkit": "^1.9.7",
+    "@types/node-fetch": "^2.6.9",
+    "history": "^5.3.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0",
+    "react-redux": "^7.2.9",
+    "react-router": "^6.20.0",
+    "react-router-dom": "^6.20.0",
+    "redux": "^4.2.1",
+    "redux-thunk": "^2.4.2"
   },
   "devDependencies": {
-    "@commitlint/cli": "^17.7.2",
-    "@commitlint/config-conventional": "^17.7.0",
-    "@rockpack/compiler": "3.1.0",
-    "@types/loadable__component": "5.13.5",
-    "@types/node": "18.18.4",
-    "@types/react": "18.2.28",
-    "@types/react-dom": "18.2.13",
-    "@types/react-helmet": "6.1.7",
-    "@types/webpack-env": "1.18.2",
+    "@commitlint/cli": "^18.4.3",
+    "@commitlint/config-conventional": "^18.4.3",
+    "@rockpack/compiler": "^4.2.0",
+    "@types/loadable__component": "^5.13.7",
+    "@types/node": "^20.10.1",
+    "@types/react": "^18.2.39",
+    "@types/react-dom": "^18.2.17",
+    "@types/react-helmet": "^6.1.9",
+    "@types/webpack-env": "^1.18.4",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
     "@typescript-eslint/parser": "^5.62.0",
-    "eslint": "^8.51.0",
+    "eslint": "^8.54.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-typescript": "^17.1.0",
-    "eslint-config-prettier": "9.0.0",
+    "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-check-file": "^2.6.2",
-    "eslint-plugin-import": "^2.28.1",
+    "eslint-plugin-import": "^2.29.0",
     "eslint-plugin-jest-formatting": "^3.1.0",
     "eslint-plugin-json": "^3.1.0",
-    "eslint-plugin-perfectionist": "^2.1.0",
+    "eslint-plugin-perfectionist": "^2.5.0",
     "eslint-plugin-prettier": "^5.0.1",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-regexp": "^2.1.1",
-    "eslint-plugin-sonarjs": "^0.22.0",
-    "eslint-plugin-unicorn": "^48.0.1",
+    "eslint-plugin-sonarjs": "^0.23.0",
+    "eslint-plugin-unicorn": "^49.0.0",
     "husky": "^8.0.3",
-    "lint-staged": "^14.0.1",
-    "prettier": "^3.0.3",
+    "lint-staged": "^15.1.0",
+    "prettier": "^3.1.0",
     "sort-package-json": "^2.6.0",
-    "stylelint": "^15.10.3",
+    "stylelint": "^15.11.0",
     "stylelint-config-clean-order": "^5.2.0",
     "stylelint-config-prettier-scss": "^1.0.0",
-    "stylelint-config-recommended-scss": "^13.0.0",
-    "stylelint-config-standard-scss": "^11.0.0",
-    "stylelint-scss": "^5.2.1"
+    "stylelint-config-recommended-scss": "^13.1.0",
+    "stylelint-config-standard-scss": "^11.1.0",
+    "stylelint-scss": "^5.3.1"
+  },
+  "engines": {
+    "node": ">=20.0.0"
   }
 }
