--- a/package.json
+++ b/package.json
@@ -10,74 +10,70 @@
     "analyzer": "node scripts.build --analyzer",
     "build": "node scripts.build --mode=production",
     "format": "npm run format:package && npm run format:prettier && npm run format:code && npm run format:styles",
-    "format:code": "eslint --ext .ts,.tsx,.json src/ --fix",
+    "format:code": "eslint --fix",
     "format:package": "sort-package-json",
     "format:prettier": "prettier --write \"src/**/*.{ts,tsx,json}\"",
     "format:styles": "stylelint \"src/**/*.scss\" --fix",
     "lint": "npm run lint:ts && npm run lint:code",
-    "lint:code": "eslint --ext .ts,.tsx,.json src/",
+    "lint:code": "eslint",
     "lint:commit": "commitlint -e",
     "lint:scss": "stylelint \"src/**/*.scss\"",
     "lint:ts": "tsc --noEmit",
     "pre-commit": "lint-staged",
-    "prepare": "husky install",
+    "prepare": "husky",
     "start": "node scripts.build",
     "test": "echo \"Error: no test specified\""
   },
   "dependencies": {
-    "@loadable/component": "^5.15.3",
+    "@loadable/component": "^5.16.4",
     "@reduxjs/toolkit": "^1.9.7",
-    "@types/node-fetch": "^2.6.9",
     "history": "^5.3.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-helmet": "^6.1.0",
     "react-redux": "^7.2.9",
-    "react-router": "^6.20.0",
-    "react-router-dom": "^6.20.0",
+    "react-router": "^6.26.1",
+    "react-router-dom": "^6.26.1",
     "redux": "^4.2.1",
     "redux-thunk": "^2.4.2"
   },
   "devDependencies": {
-    "@commitlint/cli": "^19.3.0",
+    "@commitlint/cli": "^19.4.0",
     "@commitlint/config-conventional": "^19.2.2",
-    "@rockpack/compiler": "^4.2.0",
-    "@types/loadable__component": "^5.13.7",
-    "@types/node": "^20.12.10",
+    "@rockpack/compiler": "^4.3.1",
+    "@types/loadable__component": "^5.13.9",
+    "@types/node": "^22.5.0",
     "@types/react": "^18.3.1",
     "@types/react-dom": "^18.3.0",
     "@types/react-helmet": "^6.1.11",
     "@types/webpack-env": "^1.18.5",
     "@types/yargs": "^17.0.32",
-    "@typescript-eslint/eslint-plugin": "^7.8.0",
-    "@typescript-eslint/parser": "^7.8.0",
-    "eslint": "^8.57.0",
-    "eslint-config-airbnb": "^19.0.4",
-    "eslint-config-airbnb-typescript": "^18.0.0",
+    "@typescript-eslint/eslint-plugin": "^8.3.0",
+    "@typescript-eslint/parser": "^8.3.0",
+    "eslint": "^9.9.1",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-check-file": "^2.8.0",
-    "eslint-plugin-file-extension-in-import-ts": "^2.1.0",
-    "eslint-plugin-import": "^2.29.1",
-    "eslint-plugin-jest-formatting": "^3.1.0",
-    "eslint-plugin-json": "^3.1.0",
-    "eslint-plugin-perfectionist": "^2.10.0",
-    "eslint-plugin-prettier": "^5.1.3",
-    "eslint-plugin-react": "^7.34.1",
+    "eslint-plugin-json": "^4.0.1",
+    "eslint-plugin-perfectionist": "^3.2.0",
+    "eslint-plugin-prettier": "^5.2.1",
+    "eslint-plugin-react": "^7.35.0",
     "eslint-plugin-react-hooks": "^4.6.2",
-    "eslint-plugin-regexp": "^2.5.0",
-    "eslint-plugin-sonarjs": "^1.0.3",
-    "eslint-plugin-unicorn": "^52.0.0",
-    "husky": "^9.0.11",
-    "lint-staged": "^15.2.2",
-    "prettier": "^3.2.5",
-    "sort-package-json": "^2.10.0",
-    "stylelint": "^16.5.0",
+    "eslint-plugin-regexp": "^2.6.0",
+    "eslint-plugin-sonarjs": "^2.0.1",
+    "eslint-plugin-unicorn": "^55.0.0",
+    "globals": "^15.9.0",
+    "husky": "^9.1.5",
+    "lint-staged": "^15.2.9",
+    "prettier": "^3.3.3",
+    "sort-package-json": "^2.10.1",
+    "stylelint": "^16.8.2",
     "stylelint-config-clean-order": "^5.4.2",
     "stylelint-config-prettier-scss": "^1.0.0",
-    "stylelint-config-recommended-scss": "^14.0.0",
+    "stylelint-config-recommended-scss": "^14.1.0",
     "stylelint-config-standard-scss": "^13.1.0",
-    "stylelint-scss": "^6.3.0",
-    "typescript": "^5.4.5"
+    "stylelint-scss": "^6.5.1",
+    "typescript": "^5.5.4",
+    "typescript-eslint": "^8.3.0"
   },
   "engines": {
     "node": ">=22.0.0",
