fix: fix configuration

--- a/package.json
+++ b/package.json
@@ -10,12 +10,12 @@
     "analyzer": "node scripts.build --analyzer",
     "build": "node scripts.build --mode=production",
     "format": "npm run format:package && npm run format:prettier && npm run format:code && npm run format:styles",
-    "format:code": "eslint --fix",
+    "format:code": "eslint . --fix",
     "format:package": "sort-package-json",
     "format:prettier": "prettier --write \"src/**/*.{ts,tsx,json}\"",
     "format:styles": "stylelint \"src/**/*.scss\" --fix",
     "lint": "npm run lint:ts && npm run lint:code",
-    "lint:code": "eslint",
+    "lint:code": "eslint .",
     "lint:commit": "commitlint -e",
     "lint:scss": "stylelint \"src/**/*.scss\"",
     "lint:ts": "tsc --noEmit",
@@ -59,7 +59,6 @@
     "eslint-plugin-react": "^7.35.0",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-regexp": "^2.6.0",
-    "eslint-plugin-sonarjs": "^2.0.1",
     "eslint-plugin-unicorn": "^55.0.0",
     "globals": "^15.9.0",
     "husky": "^9.1.5",
