feat: replace sort-package-json to eslint plugin

--- a/package.json
+++ b/package.json
@@ -2,16 +2,14 @@
   "name": "codeformat-react-typescript",
   "version": "1.0.0",
   "description": "",
-  "keywords": [],
   "license": "ISC",
   "author": "",
   "main": "index.js",
   "scripts": {
     "analyzer": "node scripts.build --analyzer",
     "build": "node scripts.build --mode=production",
-    "format": "npm run format:package && npm run format:prettier && npm run format:code && npm run format:styles",
+    "format": "npm run format:prettier && npm run format:code && npm run format:styles",
     "format:code": "eslint . --fix",
-    "format:package": "sort-package-json",
     "format:prettier": "prettier --write \"src/**/*.{ts,tsx,json}\"",
     "format:styles": "stylelint \"src/**/*.scss\" --fix",
     "lint": "npm run lint:ts && npm run lint:code",
@@ -54,6 +52,7 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-check-file": "^2.8.0",
     "eslint-plugin-json": "^4.0.1",
+    "eslint-plugin-package-json": "^0.31.0",
     "eslint-plugin-perfectionist": "^4.0.3",
     "eslint-plugin-prettier": "^5.2.1",
     "eslint-plugin-react": "^7.35.0",
@@ -63,7 +62,6 @@
     "husky": "^9.1.5",
     "lint-staged": "^15.2.9",
     "prettier": "^3.3.3",
-    "sort-package-json": "^2.10.1",
     "stylelint": "^16.8.2",
     "stylelint-config-clean-order": "^5.4.2",
     "stylelint-config-prettier-scss": "^1.0.0",
